Fix wrapping in results

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,7 @@ a.name:hover {
 label {
   padding: 0.5em;
 }
+
+.results h2 {
+  white-space: normal !important;
+}
